crates/djls-semantic/tests/snapshots/corpus__repos__healthchecks__hc__front__templatetags__asciitable.py.snap
---
source: crates/djls-semantic/tests/corpus.rs
expression: snapshot(result)
---
tag_rules: {}
filter_arities: {}
block_specs:
  "hc.front.templatetags.asciitable::tag::table":
    end_tag: endtable
    intermediates: []
    opaque: false
