crates/djls-semantic/tests/snapshots/corpus__repos__healthchecks__hc__front__templatetags__linemode.py.snap
---
source: crates/djls-semantic/tests/corpus.rs
expression: snapshot(result)
---
tag_rules: {}
filter_arities: {}
block_specs:
  "hc.front.templatetags.linemode::tag::linemode":
    end_tag: endlinemode
    intermediates: []
    opaque: false
